# droplinks

./: .deepsource.toml  .gitignore  README.md  pyproject.toml
core/: exceptions.py  services.py  settings.py  validators.py
droplinks/: app.py  db.py  services.py  utils.py
static/droplinks/: .eslintrc.js  README.md  index.html  package-lock.json  package.json
static/droplinks/src/: App.vue
static/droplinks/src/components/: About.vue  Contact.vue  Home.vue  Login.vue  Navigation.vue  Signup.vue
static/droplinks/src/router/: index.js
tests/: test_contact_create.py  test_validators.py
utils/: auth.py  status_codes.py
